<resources>
    <string name="app_name">LuxeVista Resort</string>
    <string name="go_to_register_now">Go to Register Now</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="back_to_login">Back to Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_password">Password (min. 8 characters)</string>
    <string name="phone_optional">Phone Number (ex: 07xxxxxxxx)</string>
    <string name="full_name">Full Name</string>
</resources>