<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CEFAD0"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="24dp"
        android:paddingBottom="24dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="24dp"
            android:src="@drawable/img_logo_1"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/regFullName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <EditText
            android:id="@+id/regEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <EditText
            android:id="@+id/regPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/phone_optional"
            android:inputType="phone"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <EditText
            android:id="@+id/regConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:backgroundTint="#004859" />

        <Button
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="12dp"
            android:text="@string/back_to_login"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="18sp"
            android:backgroundTint="#198450" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
